# koa-bot

./: .dockerignore  .gitignore  .pylintrc  .python-version  Dockerfile  LICENSE  README.md  codeql-analysis.yml  cogtest.py  converter.py  docker-compose.yml  gaka.py  koabot.sh  koakuma.py  koarun.sh  koaupdate.sh  net.py  patterns.py  pyproject.toml  readme.txt  regex.txt  requirements.txt  run.sh  sftp_commands.txt  urusai.py  useful_snippets.py  winrun.bat  winrun.cmd
.github/: CODEOWNERS
.github/workflows/: codeql-analysis.yml
cogs/: gallery.py  linkparser.py  members.py  onmessage.py  owner.py  simple.py
db/: database.sql  users.sql
db/objects/: discord_user.py
db/schema/: reactionroles.sql
koabot/: __init.py  __init__.py  __main__.py  board.py  converter.py  database.py  kbot.py  koakuma.py  net.py  patterns.py  tasks.py
koabot/boards/: boardcog.py  danbooru.py  gallery.py
koabot/cogs/: botstatus.py  converter.py  dalle.py  events.py  forums.py  gallery.py  game.py  imageboard.py  infolookup.py  livereload.py  music.py  reactionroles.py  streamservice.py  tasks.py
koabot/cogs/basic/: timezone.py  useractions.py
koabot/cogs/handler/: board.py  events.py  gallery.py
koabot/cogs/previews/: deviantart.py  imgur.py  patreon.py  pixiv.py  reddit.py  twitter.py
koabot/cogs/site/: deviantart.py  imgur.py  jisho.py  patreon.py  picarto.py  pixiv.py  reddit.py  twitter.py  urbandictionary.py  wikipedia.py
koabot/core/: admin.py  base.py  embed.py  net.py  posts.py  previews.py  site.py  utils.py
koabot/utils/: base.py  net.py  posts.py
tests/: test_roll.py
