[tool.poetry]
name = "koa-bot"
version = "0.11.0"
description = ""
authors = []
readme = "README.md"
packages = [
    { include = "koabot" },
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Natural Language :: English",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.7",
    "Topic :: Internet",
]

[tool.poetry.dependencies]
python = "^3.7"
appdirs = "^1.4.4"
BASC-py4chan = "^0.6.5"
commentjson = "^0.9.0"
"discord.py" = {extras = ["voice"], version = "^1.7.3"}
emoji = "^1.6.0"
forex-python = "^1.6"
ImageHash = "^4.2.1"
mergedeep = "^1.3.4"
num2words = "^0.5.10"
Pint = "^0.17"
PixivPy-Async = "^1.2.13"
pymediawiki = "^0.7.0"
pytz = "^2021.3"
tldextract = "^3.1.2"
tweepy = "^4.1.0"
single-source = "^0.2.0"
yt-dlp = "^2021.10.10"
uvloop = {platform = "linux", version = "*", optional = true}
aiodns = {version = "*", optional = true}
cchardet = {version = "*", optional = true}

[tool.poetry.dev-dependencies]
autopep8 = "^1.5.7"
pylint = "^2.11.1"
rope = "^0.20.1"
wheel = "^0.37.0"

[tool.poetry.extras]
speed = ["uvloop","aiodns","cchardet"]

[tool.isort]
sections = ["FUTURE", "STDLIB", "THIRDPARTY", "FIRSTPARTY", "LOCALFOLDER"]

[tool.autopep8]
max-line-length = 120

[tool.pylint.messages_control]
max-line-length = 120
good-names-rgxs= "^[_a-z][_a-z0-9]?$"
disable = [
#    "anomalous-backslash-in-string",   # W1401
#    "line-too-long",                   # C0301
#    "invalid-name",                    # C0103
#     "wildcard-import",                # W0401
    "assigning-non-slot",               # E0237
]

[tool.pylint.typecheck]
ignored-classes = "Bot"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
